--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.16.1",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
