--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
+    "req-params": "^1.1.1",
+    "req-params-handler-nt": "^1.0.1",
     "slugify": "^1.6.6"
   }
 }
